# Kaldi

./: 00_OneTimeSetup.sh  01_Dep_Install.sh  02_Generate.sh  README.md
egs/gp/: README.txt
egs/rm/: README.txt
egs/rm/s1/: RESULTS  run.sh
src/: Makefile  NOTES  configure
src/decoder/: Makefile
src/latbin/: Makefile
src/sgmmbin/: sgmm-align-compiled.cc
src/transform/: Makefile
tools/: install.sh  openfst
tools/ATLAS/: configure
tools/ATLAS/CONFIG/: Make.ext
tools/ATLAS/CONFIG/ARCHS/: AMD64K10h64SSE3.tar.bz2  ARMv732.tar.bz2  ARMv732NEON.tar.bz2  Corei264AVX.tar.bz2  Make.ext  PIII32SSE1.tar.bz2
tools/ATLAS/CONFIG/include/: Make.ext  atlconf.h  atlconf_misc.h
tools/ATLAS/CONFIG/src/: IsGcc.c  Make.ext  SpewMakeInc.c  atlcomp.txt  atlconf_misc.c  mgwcmp.c  probe_arch.c  probe_comp.c  probe_vec.c  wincc.c  winf77.c
tools/ATLAS/CONFIG/src/backend/: Make.ext  archinfo_freebsd.c  archinfo_linux.c  archinfo_sunos.c  archinfo_win.c  archinfo_x86.c  probe_AltiVec.S  probe_VSX.S
tools/ATLAS/EXtest/: mvntest.c  mvttest.c  r1test.c  r2test.c
tools/ATLAS/include/: atlas_aux.h  atlas_enum.h  atlas_f77.h  atlas_kern3.h  atlas_kernel3.h  atlas_lapack.h  atlas_level1.h  atlas_level2.h  atlas_level3.h  atlas_lvl2.h  atlas_lvl3.h  atlas_misc.h  atlas_pkblas.h  atlas_prefetch.h  atlas_r1.h  atlas_tst.h  f77wrap_lapack.h
tools/ATLAS/include/contrib/: Make.ext
tools/ATLAS/lib/: Make.ext
tools/ATLAS/makes/: Make.Flp  Make.ext  Make.lib  Make.ttune
tools/ATLAS/src/auxil/: ATL_axpby.c  ATL_axpy.c  ATL_copy.c  ATL_cplxdivide.c  ATL_cplxinvert.c  ATL_flushCacheByAddr.c  ATL_flushcache.c  ATL_geApBt_NB.c  ATL_geadd.c  ATL_gecollapse.c  ATL_gecopy.c  ATL_gemaxnrm.c  ATL_gemove.c  ATL_gemoveT.c  ATL_gescal.c  ATL_geset.c  ATL_geswapT.c  ATL_gezero.c  ATL_hereflect.c  ATL_hescal.c  ATL_lcm.c  ATL_move.c  ATL_ptflushcache.c  ATL_scal.c  ATL_set.c  ATL_sqtrans.c  ATL_syApAt.c  ATL_syApAt_NB.c  ATL_syreflect.c  ATL_tradd.c  ATL_trcollapse.c  ATL_trscal.c  ATL_trsetL.c  ATL_trsetU.c  ATL_xerbla.c  ATL_zero.c
tools/ATLAS/src/auxil/kernel/: ATL_axpby.c  ATL_axpy_x1_y1.c  ATL_caxpy_x1_y1.c  ATL_geadd.c  ATL_gemove.c  ATL_gescal.c
tools/ATLAS/src/blas/gemm/: ATL_AgemmXX.c  ATL_CNBmm_b0.c  ATL_CNBmm_b1.c  ATL_CNBmm_bX.c  ATL_GetNB.c  ATL_GetNCNB.c  ATL_IBJBmm.c  ATL_IBNBmm.c  ATL_MBJBmm.c  ATL_NCmmIJK.c  ATL_NCmmIJK_c.c  ATL_NCmmJIK.c  ATL_NCmmJIK_c.c  ATL_cNCmmIJK.c  ATL_cNCmmIJK_c.c  ATL_cNCmmJIK.c  ATL_cNCmmJIK_c.c  ATL_ccol2blk.c  ATL_cmmIJK.c  ATL_cmmJIK.c  ATL_cmmJITcp.c  ATL_cmmJKI.c  ATL_col2blk.c  ATL_crow2blkT.c  ATL_gemm.c  ATL_gemmXX.c  ATL_gereal2cplx.c  ATL_mmBPP.c  ATL_mmIJK.c  ATL_mmJIK.c  ATL_mmJITcp.c  ATL_mmJKI.c  ATL_mmK.c  ATL_putblk.c  ATL_row2blkT.c
tools/ATLAS/src/blas/gemv/: ATL_gemv.c  ATL_gemvCN.c  ATL_gemvCT.c  ATL_gemvN.c  ATL_gemvT.c  ATL_mvnk_Mlt16.c  ATL_mvnk_smallN.c  ATL_mvtk_Mlt16.c  ATL_mvtk_smallN.c
tools/ATLAS/src/blas/ger/: ATL_ger.c  ATL_ger2.c
tools/ATLAS/src/blas/level1/: ATL_dsdot.c  ATL_rot.c  ATL_rotg.c  ATL_rotm.c  ATL_rotmg.c  ATL_sdsdot.c
tools/ATLAS/src/blas/level2/: ATL_hemv.c  ATL_symv.c  ATL_trmv.c  ATL_trsv.c
tools/ATLAS/src/lapack/: ATL_gelq2.c  ATL_gelqf.c  ATL_gelqr.c  ATL_gels.c  ATL_geql2.c  ATL_geqlf.c  ATL_geqlr.c  ATL_geqr2.c  ATL_geqrf.c  ATL_geqrr.c  ATL_gerq2.c  ATL_gerqf.c  ATL_gerqr.c  ATL_getrf.c  ATL_getrfC.c  ATL_getrfR.c  ATL_getri.c  ATL_getriC.c  ATL_getriR.c  ATL_getrs.c  ATL_lacgv.c  ATL_ladiv.c  ATL_lapy2.c  ATL_lapy3.c  ATL_larf.c  ATL_larfb.c  ATL_larfg.c  ATL_larft.c  ATL_laswp.c  ATL_lauum.c  ATL_lauumL.c  ATL_lauumU.c  ATL_ormqr.c  ATL_potrf.c  ATL_potrfL.c  ATL_potrfRL.c  ATL_potrfRU.c  ATL_potrfU.c  ATL_potrs.c  ATL_trtri.c  (+5 more)
tools/ATLAS/src/testing/: ATL_dsf77dot.c  ATL_epsilon.c  ATL_f77amax.c  ATL_f77asum.c  ATL_f77axpy.c  ATL_f77copy.c  ATL_f77dot.c  ATL_f77dotc_sub.c  ATL_f77dotu_sub.c  ATL_f77gbmv.c  ATL_f77gelqf.c  ATL_f77gels.c  ATL_f77gemm.c  ATL_f77gemv.c  ATL_f77geqlf.c  ATL_f77geqrf.c  ATL_f77ger.c  ATL_f77gerc.c  ATL_f77gerqf.c  ATL_f77geru.c  ATL_f77gesv.c  ATL_f77getrf.c  ATL_f77getri.c  ATL_f77hbmv.c  ATL_f77hemm.c  ATL_f77hemv.c  ATL_f77her.c  ATL_f77her2.c  ATL_f77her2k.c  ATL_f77herk.c  ATL_f77hpmv.c  ATL_f77hpr.c  ATL_f77hpr2.c  ATL_f77lauum.c  ATL_f77nrm2.c  ATL_f77posv.c  ATL_f77potrf.c  ATL_f77rot.c  ATL_f77rotg.c  ATL_f77rotm.c  (+44 more)
tools/ATLAS/src/threads/: ATL_DecAtomicCount_ppc.S  ATL_ResetAtomicCount_ppc.S
tools/ATLAS/src/threads/lapack/: ATL_tgeql2.c  ATL_tgeqr2.c
tools/ATLAS/tune/blas/gemm/: emit_mm.c  fc.c  findCE.c  gmmsearch.c  hcsearch.c  mmcuncpsearch.c  mmgen_sse.c  mmksearch_sse.c  mmsearch.c  mmtst.c  tfc.c  ummsearch.c  usercomb.c  userflag.c  userindex.c
tools/ATLAS/tune/blas/gemv/: mvktime.c  mvnhgen.c  mvnktest.c  mvntest.c  mvthgen.c  mvtktest.c  mvttest.c
tools/ATLAS/tune/blas/ger/: r1hgen.c  r1ktest.c  r1ktime.c  r2hgen.c  r2ktime.c  s1nxtune.c  s2nxtune.c
tools/ATLAS/tune/lapack/: lanbsrch.c
tools/ATLAS/tune/sysinfo/: ATL_cputime.c  ATL_walltime.c  GetSysSum.c  L1CacheSize.c  emit_buildinfo.c  emit_typ.c  matime.c
tools/CLAPACK_include/: clapack.h
tools/irstlm/: Makefile.am  README  RELEASE  config.h.in  configure.in  make-release  regenerate-makefiles.sh
tools/irstlm/doc/: Makefile.am  irstlm-manual.tex
tools/irstlm/scripts/: Makefile.am  add-start-end.sh  build-lm-qsub.sh  build-lm.sh  build-sublm.pl  goograms2ngrams.pl  lm-stat.pl  merge-sublm.pl  ngram-split.pl  rm-start-end.sh  sort-lm.pl  split-dict.pl  split-ngt.sh
tools/irstlm/src/: Makefile.am  compile-lm.cpp  cplsa.cpp  cplsa.h  dictionary.h  doc.cpp  doc.h  gzfilebuf.h  htable.h  interplm.cpp  interpolate-lm.cpp  lmmacro.cpp  lmmacro.h  lmtable.cpp  lmtable.h  ngramtable.cpp  plsa.cpp  prune-lm.cpp  stream-tlm.cpp  timer.cpp  timer.h  util.cpp  util.h
tools/sctk-2.4.0/doc/: sclite.1
tools/tarball/: sctk-2.4.0-20091110-0958.tar.bz2
(+444 files in other folders)
